# bsit3

./: .clang-format  CMakeLists.txt
src/client/: main.cpp
src/client/cli/: cli.cpp  cli.hpp
src/client/connector/: connector.cpp  connector.hpp  context.cpp  context.hpp  tcp.cpp  tcp.hpp
src/common/: alias.hpp  data.hpp  errors.hpp  logging.hpp  str_utils.cpp  str_utils.hpp  tcp_utils.cpp  tcp_utils.hpp  utils.cpp  utils.hpp
src/common/proto/: message.cpp  message.hpp  packable.cpp  packable.hpp  proto.cpp  proto.hpp  request.cpp  request.hpp  response.cpp  response.hpp
src/common/proto/encryption/: encryption.cpp  encryption.hpp
src/server/: main.cpp  os_utils.cpp  os_utils.hpp  test.cpp  test.hpp
src/server/server/: handlers.cpp  handlers.hpp  server.cpp  server.hpp  tcp.cpp  tcp.hpp
